# PA

./: .dockerignore  .gitignore  README.md  docker-compose.yml  init_db.sh  perfectattendance.dev.yml
PerfectAttendance/: manage.py  pyproject.toml  requirements.txt
PerfectAttendance/PerfectAttendance/: asgi.py  settings.py  urls.py  wsgi.py
PerfectAttendance/Users/api/: urls.py
PerfectAttendance/courses_api/: models.py  serializers.py  urls.py  views.py
PerfectAttendance/courses_api/migrations/: 0001_initial.py  0002_course_instructor.py
PerfectAttendance/requests/: api.http
api/: .dockerignore  main.py  psqlconnect.py  pyproject.toml
client/: craco.config.js  package.json
client/src/: App.tsx
client/src/components/: CourseList.tsx  Navigation.tsx
client/src/forms/: Course.tsx  Login.tsx  Register.tsx
frontend/: .dockerignore  Dockerfile  Makefile  craco.config.js  docker-compose.yml  init_db.sh  package.json  perfectattendance.dev.yml  perfectattendance.sql  pyproject.toml
frontend/api/: .dockerignore  Dockerfile  main.py  psqlconnect.py  pyproject.toml
frontend/client/: .dockerignore  .gitignore  Dockerfile  package.json
frontend/client/src/: App.tsx
frontend/client/src/forms/: BadgeScan.tsx  Home.tsx  Login.tsx  Register.tsx
frontend/pgsql/: Dockerfile
frontend/public/: DatabaseFunctions.py  app.py  index.html  routes.py
frontend/src/: App.tsx
frontend/src/components/: CourseList.tsx  Navigation.tsx
frontend/src/forms/: BadgeScan.tsx  Course.tsx  Home.tsx  Login.tsx  Register.tsx  Scan.tsx  common.ts  index.ts
frontend/src/styles/: index.css
