[project]
name = ""
version = ""
description = ""
authors = [
    {name = "John Wise", email = "jdwise@uab.edu"},
    {name = "Cameron Wood", email = "cwood611@uab.edu"},
]
dependencies = [
    "django==4.0.6",
    "djangorestframework==3.13.1",
    "django-rest-knox==4.2.0",
    "django-cors-headers>=3.13.0",
    "djangorestframework-simplejwt>=5.2.0",
    "setuptools>=63.2.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
